# portfolio.cli

./: .gitignore  CNAME  Dockerfile  README.rst  provenance.json  pyproject.toml  setup.py
.github/workflows/: build.yml  deploy.yml
portfolio/: __init__.py
portfolio/cmd/: cli.py
portfolio/templates/: __init__.py  about.py  certificates.py  education.py  experience.py  help.py  social.py
