[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "portfolio"
authors = [{ name = "Pham Le Gia Dai", email = "daipham.3213@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]
dynamic = ["version", "dependencies"]

[options.packages.find]
where = "portfolio"

[tool.hatch]
version.source = "vcs"

[project.scripts]
me = "portfolio.cmd.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 79

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pycodestyle warnings
    "W"
]
ignore = [
    "E203",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
